<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authorInfoToast"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/graphite"
    android:orientation="horizontal"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200px"
        android:layout_height="300px"
        app:srcCompat="@drawable/author_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/autorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/authorName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/speciality"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>